--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="Powder_Size">POWDER IN BOTTLE</string>
     <string name="Gel_Size">GEL IN TUBE</string>
     <string name="Tablet_Size">TABLET(S) IN STRIP</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
